src/objects/PM_Regulatory_Clearance__c.object
<CustomObject>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>PM Regulatory Clearance</relationshipLabel>
        <relationshipName>PM_Regulatory_Clearance</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reg_Clearance__c</fullName>
        <label>Reg Clearance</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Regulatory_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regulatory List</label>
        <referenceTo>Chem_Regulation__c</referenceTo>
        <relationshipLabel>PM Regulatory Clearance</relationshipLabel>
        <relationshipName>PM_Regulatory_Clearance</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>PM Regulatory Clearance</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PMRC-{0000000000}</displayFormat>
        <label>PM Regulatory Clearance Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PM Regulatory Clearance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>